force-app/main/default/objects/CAP_Form__c/CAP_Form__c.object-meta.xml
<CustomObject>
    <description>This object is used to submit a CAP/Customer assurance engagement request</description>
    <label>CAP/Customer Assurance Request</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>CAP Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAP/Customer Assurance Request</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>