force-app/main/default/objects/CAP_Form__c/fields/Additional_Info_Project__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_Project__c</fullName>
    <label>Additional Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>