force-app/main/default/objects/CAP_Form__c/fields/Anticipated_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Project_Start_Date__c</fullName>
    <inlineHelpText>When is CAP or CAT support required from</inlineHelpText>
    <label>Anticipated Project Start Date</label>
    <type>Date</type>
</CustomField>