force-app/main/default/objects/CAP_Form__c/fields/Current_Revenue_Impact__c.field-meta.xml
<CustomField>
    <fullName>Current_Revenue_Impact__c</fullName>
    <description>revenue impact- current</description>
    <label>Current $ Revenue Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>