force-app/main/default/objects/CAP_Form__c/fields/Customer_Case_Support__c.field-meta.xml
<CustomField>
    <fullName>Customer_Case_Support__c</fullName>
    <label>Customer Case Support # (if applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>