force-app/main/default/objects/CAP_Form__c/fields/Customer_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Customer_Expectations__c</fullName>
    <label>Customer Expectations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>