force-app/main/default/objects/CAP_Form__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <type>TextArea</type>
</CustomField>