force-app/main/default/objects/CAP_Form__c/fields/Customer_Promised_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Promised_Completion_Date__c</fullName>
    <label>Customer Promised Completion Date</label>
    <type>Date</type>
</CustomField>