force-app/main/default/objects/CAP_Form__c/fields/Financial_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Financial_Of_Business__c</fullName>
    <inlineHelpText>Expected estimated yearly $ revenue for the whole customer account</inlineHelpText>
    <label>Financial $ Of Business</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>