force-app/main/default/objects/CAP_Form__c/fields/Future_Revenue_Impact__c.field-meta.xml
<CustomField>
    <fullName>Future_Revenue_Impact__c</fullName>
    <description>revenue impact- future</description>
    <label>Future $ Revenue Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>