force-app/main/default/objects/CAP_Form__c/fields/Is_there_a_Partner_Involved__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_Partner_Involved__c</fullName>
    <label>Is there a Partner Involved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>