force-app/main/default/objects/CAP_Form__c/fields/NCR_Resources_Required__c.field-meta.xml
<CustomField>
    <fullName>NCR_Resources_Required__c</fullName>
    <label>NCR Resources Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>