force-app/main/default/objects/CAP_Form__c/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <inlineHelpText>NCR contacts who are working on the project / issue</inlineHelpText>
    <label>Additional Personnel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>