force-app/main/default/objects/CAP_Form__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <label>Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>