force-app/main/default/objects/CAP_Form__c/fields/Relevant_Timing_Issues__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Timing_Issues__c</fullName>
    <label>Relevant Timing Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>