force-app/main/default/objects/CAP_Form__c/fields/Severity_And_Impact_On_NCR__c.field-meta.xml
<CustomField>
    <fullName>Severity_And_Impact_On_NCR__c</fullName>
    <label>Severity And Impact On NCR</label>
    <type>TextArea</type>
</CustomField>