force-app/main/default/objects/CAP_Form__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <defaultValue>&quot;CAP: Engage when a customer relationship is in severe jeopardy and other escalation processes have failed.                                 CAT: Engage when an account team requires support to drive internal processes and/or issues across functions / industries / organizations / geographies to enhance Customer Satisfaction and strategic account growth.   Watch List: a Program Manager is assigned to monitor BAU, in the event progress is not made, the request can be resubmitted and dispositioned accordingly.&quot;</defaultValue>
    <label>Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>