force-app/main/default/objects/CAP_Form__c/validationRules/Start_Date_must_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_must_be_in_future</fullName>
    <active>true</active>
    <description>Anticipated Start Date field can only be in the future</description>
    <errorConditionFormula>Anticipated_Project_Start_Date__c  &lt; TODAY()</errorConditionFormula>
    <errorMessage>Anticipated Project Start Date Cannot Be In The Past</errorMessage>
</ValidationRule>