force-app/main/default/objects/CAP_Form__c/listViews/CAP_Approvers_CAP_Form.listView-meta.xml
<ListView>
    <fullName>CAP_Approvers_CAP_Form</fullName>
    <filterScope>Queue</filterScope>
    <label>CAP Approvers</label>
    <queue>CAP_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>