force-app/main/default/objects/CAP_Form__c/listViews/CAP_Request_NOT_Submitted.listView-meta.xml
<ListView>
    <fullName>CAP_Request_NOT_Submitted</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ApprovalRequestfront__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApprovalRequestfront__c</field>
        <operation>equals</operation>
        <value>Not Submitted</value>
    </filters>
    <label>CAP Request NOT Submitted</label>
    <sharedTo>
        <roleAndSubordinatesInternal>ChiefExecutiveOffice</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>